
syntax= "proto3";

package product;

option go_package = "github.com/ecom/packages/proto/product";

service ProductService {
	rpc GetProductById (ProductReq) returns (ProductRes);
	rpc SearchProducts (SearchReq) returns (SearchRes);
}

message Product {
	string id = 1;
	string name = 2;
	string description = 3;
	float price = 4;
	int32 stock = 5;
	float rating = 6;
	string category = 7;
}

message ProductReq {
	string id =  1;
}

message ProductRes {
	string id = 1;
	string name = 2;
	string description = 3;
	float price = 4;
	int32 stock =5;
	string category = 6;
	float rating = 7;
}

message SearchReq {
	string query = 1;
	string category = 2;
	float min_price = 3;
	float max_price = 4;
	string sort = 5;
	int32 page = 6;
	int32 limit = 7;
}

message SearchRes {
	repeated Product products = 1;
}
